# agent-hashmap-rust

./: CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  deny.toml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml  security.yml
docs/: api.md  architecture.md  cli-onboarding.md  roadmap.md  security.md  storage-format.md  threat-model.md
examples/: basic.rs  config_init.rs  multi_agent.rs
schemas/: config.schema.json  store.schema.json
scripts/: audit.sh  dev.sh  release.sh
src/: config.rs  error.rs  lib.rs  main.rs  types.rs
src/cli/: mod.rs
src/core/: map.rs  mod.rs  namespace.rs
src/store/: engine.rs  mod.rs  persist.rs
tests/: fuzz_parser.rs  integration_cli.rs  integration_index.rs  integration_init.rs  integration_store.rs
