[package]
name = "agent-memory-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Secure local-first memory infrastructure for AI agents"

[lib]
name = "agent_hashmap"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
directories = "5"

[dev-dependencies]
tempfile = "3"
